updating the about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,9 +21,10 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Hey, Im Linger</p>
         <br>
-        <p>My name is Linger Cuares, I'm 26 years old, I have a degree in Modern Languages from Universidad Arturo Michelena .
+        <p>I'm currently studying web development with Python, Flask, HTML 5, Jinja, Bootstrap, Selenium and CSS 3.
+          I have a degree in Modern Languages from Universidad Arturo Michelena .
           I also have a certification of marketing and sells from Universad José Antonio Páez.
-          I'm currently studying web development with Python, Flask, HTML 5, Jinja, Bootstrap, Selenium and CSS 3.</p>
+          </p>
       </div>
     </div>
   </div>
