--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         </div>
         <hr>
         {% endfor %}
-
+        {% if current_user.is_authenticated %}
         <!-- New Post -->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
@@ -47,6 +47,7 @@
       </div>
     </div>
   </div>
+        {% endif %}
   <hr>
 
 {% include "footer.html" %}
